# RAG-Firewall

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: dependencies.py  main.py
api/middleware/: rate_limiter.py
api/routes/: audit.py  ingest.py  query.py
config/: default.yaml
evaluation/: metrics.py
evaluation/attack_suite/: injection_attacks.py
firewall/: pipeline.py
firewall/stages/: injection_classifier.py
models/: schemas.py
scripts/: init_db.sql  run_eval.py
storage/: audit_db.py  vector_store.py
tests/: conftest.py  test_injection_classifier.py  test_pipeline.py
