[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-firewall"
version = "0.1.0"
description = "Adversarial-grade defense layer for Retrieval-Augmented Generation systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RAG Firewall Contributors" }]

dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # ML / Embeddings
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "sentence-transformers>=3.0.0",
    "onnxruntime>=1.17.0",
    "optimum[onnxruntime]>=1.19.0",
    "huggingface-hub>=0.22.0",

    # Vector Store
    "qdrant-client>=1.9.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",

    # Data
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",

    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "tiktoken>=0.7.0",
    "hashlib2>=1.0.0",
    "langdetect>=1.0.9",

    # Security / Validation
    "bleach>=6.1.0",
    "cryptography>=42.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=24.11.0",
    "ruff>=0.4.1",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

dashboard = [
    "streamlit>=1.33.0",
    "plotly>=5.21.0",
    "pandas>=2.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "firewall", "storage", "models"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = ["tests/*", "dashboard/*", "scripts/*"]
